# ubc-course-availability

./: .gitignore  README.md  config.py  requirements.txt  scraper.py  setup.cfg  ui.py
pip-wheel-metadata/ubc_course_availability-0.0.0.dist-info/: METADATA  top_level.txt
src/ubc_course_availability/: Course.py  alert.py  availability.py  scraper.py
src/ubc_waitlist/: Section.py  availability.py  main.py  scraper.py
