[metadata]
name = ubc-waitlist
author = Sean White

[options]
packages =
    ubc_waitlist
install_requires =
    python-dotenv>=0.20.0
    pyshorteners>=1.0.1
    requests-html>=0.10.0
    beautifulsoup4>=4.10.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
ubc_waitlist = py.typed

[flake8]
max-line-length = 80
